# safelisprs

./: .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
crates/slc/: Cargo.toml
crates/slc/src/: main.rs
crates/slc/tests/: slc.rs
crates/sli/: Cargo.toml
crates/sli/src/: main.rs
crates/sli/tests/: sli.rs
doc/: plan_1_language_changes.md  plan_2_parser.md  plan_3_type_system.md  plan_4_segmented_stack_and_void_singleton.md  type_system_future.md  type_system_plan.md
src/: builtins.rs  closure.rs  compiler.rs  interpreter.rs  lib.rs  parser.rs  prelude.rs  std.sl  transform.rs  transforms.rs  typecheck.rs  types.rs  wasm.rs
src/builtins/: builtins_tests.rs
src/closure/: closure_tests.rs
src/compiler/: compiler_tests.rs
src/interpreter/: interpreter_tests.rs
src/parser/: parser_tests.rs
src/prelude/: prelude_tests.rs
src/typecheck/: typecheck_tests.rs
src/wasm/: wasm_tests.rs
tests/: moduletest.sl  myfirst.sl  secondmodule.sl  sli.rs  test_eval.rs
