[package]
name = "safelisp"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Armstrong <radix@twistedmatrix.com>"]

[dependencies]
atoms = "2.2.3"
clap = "2.32"
maplit = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
bincode = "1.0"
anyhow = "1.0.56"

[dev-dependencies]
pretty_assertions = "0.5.1"
