[package]
name = "safelisp"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Armstrong <radix@twistedmatrix.com>"]

[dependencies]
atoms = "2.2.3"
clap = {version = "3.1.15", features = ["derive"]}
maplit = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
bincode = "1.0"
anyhow = "1.0.56"
gc-arena = "0.6"
wasm-encoder = "0.252.0"
blake3 = {version = "1", default-features = false}
rand_chacha = {version = "0.9", default-features = false}
rand_core = {version = "0.9", default-features = false}

[dev-dependencies]
pretty_assertions = "1.2.1"
rstest = "0.26.1"
wasmtime = {version = "46.0.1", default-features = false, features = ["cranelift", "runtime", "wat"]}
